# Quommoty

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  configure.ps1  vcpkg.json
include/: CrudeFuturesPricer.h  ElectricityFuturesPricer.h  Pricer.h
include/utils/: date_utils.h  io_utils.h  print_utils.h
src/: CrudeFuturesPricer.cpp  ElectricityFuturesPricer.cpp  Pricer.cpp  main.cpp
src/utils/: date_utils.cpp  io_utils.cpp
tests/: demo.cpp  demo.h
